deployments/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: default
  labels:
    frontend-srv: frontend-service
spec:
  replicas: 2
  selector:
    matchLabels:
      frontend-srv: frontend
  template:
    metadata:
      labels:
        frontend-srv: frontend
    spec:
      containers:
      - name: frontend
        image: hoangdung99er/frontend:tagVersion
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    frontend-srv: frontend
