deployments/user-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: default
  labels:
    service: user-deployment
spec:
  selector:
    matchLabels:
      service: user-api
  replicas: 2
  template:
    metadata:
      labels:
        service: user-api
    spec:
      containers:
      - name: user-api
        image: docker.io/hoangdung99er/user-api:v1.0.2
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"    
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: user-api
